[ch12650] Fix bullets spacing on kb list

--- a/packages/portal-style/src/modules/_kb-category.scss
+++ b/packages/portal-style/src/modules/_kb-category.scss
@@ -18,7 +18,7 @@
     display: block;
     margin-bottom: 15px;
     position: relative;
-    padding-left: 15px;
+    padding-left: 23px;
 
     &:before {
       content: "\25A0";
